--- a/source/index.html
+++ b/source/index.html
@@ -73,24 +73,24 @@
 
       <!-- advantages list -->
       <ul class="advantages__list">
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--time advantages__item--active">
           <h2 class="advantages__title">Оперативные сроки</h2>
           <p class="advantages__text">Усовершенствованная логистическая система позволяет нам просчитывать стоимость,
           производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
         </li>
 
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--contractor">
           <h2 class="advantages__title">Крупные поставщики</h2>
           <p class="advantages__text">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, CREE,
           HOLGLITRONIC, REFOND. Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
         </li>
 
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--detective">
           <h2 class="advantages__title">Полная конфиденциальность</h2>
           <p class="advantages__text">По желанию клиента мы обеспечиваем полную конфеденциальность.</p>
         </li>
 
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item--price">
           <h2 class="advantages__title">Персонализация стоимости</h2>
           <p class="advantages__text">Мы подбираем определенную фабрику, поставщиков, вид доставки, чтобы установить ту цену,
           которая Вас устраивает.</p>
