--- a/source/index.html
+++ b/source/index.html
@@ -97,6 +97,20 @@
         </li>
       </ul>
     </section> <!-- end advantages -->
+
+    <!--about-->
+    <section class="about">
+      <img class="about__icon" src="img/year.png" alt="smart device">
+      <div class="about__explanation">
+        <h2 class="about__header">О компании</h2>
+        <p class="about__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
+        технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
+        <p class="about__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
+        REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД),
+        РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p>
+        <button class="about__button">Подробнее</button>
+      </div>
+    </section>
   </main>
 </body>
 </html>
