Делаю блок о компании

--- a/source/index.html
+++ b/source/index.html
@@ -100,15 +100,40 @@
 
     <!--about-->
     <section class="about">
-      <img class="about__icon" src="img/year.png" alt="smart device">
-      <div class="about__explanation">
-        <h2 class="about__header">О компании</h2>
-        <p class="about__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
-        технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
-        <p class="about__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
-        REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД),
-        РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p>
-        <button class="about__button">Подробнее</button>
+      <div class="about__wrapper">
+        <img class="about__icon" src="img/year.png" alt="smart device">
+        <div class="about__explanation">
+          <h2 class="about__header">О компании</h2>
+          <p class="about__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
+          технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
+          <p class="about__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
+          REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД),
+          РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p>
+          <button class="about__button">Подробнее</button>
+        </div>
+      </div>
+    </section>
+    
+    <!--services-->
+    <section class="services">
+      <div class="services__wrapper">
+        <h2 class="visually-hidden">Наши услуги</h2>
+        <p class="services__title">Service Device предлагает следующие товары и услуги</p>
+
+        <ul class="services__list">
+          <li class="services__item services__item--production">
+            <p class="services__info">Производство печатных плат</p>
+            <a class="services__link" href="#"></a>
+          </li>
+          <li class="services__item services__item--mounting">
+            <p class="services__info">Монтаж печатных плат</p>
+            <a class="services__link" href="#"></a>
+          </li>
+          <li class="services__item services__item--parts">
+            <p class="services__info">Комплектующие для светотехники</p>
+            <a class="services__link" href="#"></a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
