--- a/source/index.html
+++ b/source/index.html
@@ -136,6 +136,110 @@
         </ul>
       </div>
     </section>
+    <section class="stay">
+      <div class="stay__container">
+        <div class="stay__wrapper">
+          <img class="stay__icon" src="img/paper_airplane.png" width="300" height="100" alt="smart device">
+          <div class="stay__forms">
+            <h2 class="stay__header">Остались вопросы? Задайте их нам!</h2>
+            <p class="stay__text">Мы проконсультируем Вас бесплатно</p>
+            <form class="stay__form form" method="post" action="">
+
+              <fieldset class="form__comment-item form__comment-item--name">
+                <ul class="form__list">
+                  <li class="form__item form__item--name">
+                    <input class="form__item-input" type="text" name="user-name" id="name" placeholder="Имя">
+                  </li>
+                  <li class="form__item form__item--number">
+                    <input class="form__item-input" type="text" name="number" id="number" placeholder="Телефон">
+                  </li>
+                  <li class="form__item form__item--question">
+                    <textarea class="form__area" name="question" id="question">Ваш вопрос</textarea>
+                  </li>
+                </ul>
+              </fieldset>
+              <div class="form__buttons">
+                <button class="form__button" type="submit">Задать вопрос</button>
+                <p class="form__label form__label--checkbox">
+                  <input class="form__input-checkbox" type="checkbox" name="agree" id="agree" checked>
+                  <label class="form__label" for="agree">Я согласен на обработку персональных данных</label>
+                </p>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <section class="footer__left">
+        <div class="footer__logo">
+          <a class="footer__logo-link logo">
+            <!-- <picture>-->
+            <!--<source media="(min-width: 1200px)" srcset="#">
+            <source media="(min-width: 768px)" srcset="#">-->
+            <img class="footer-logo__icon" src="img/icon-logo.svg" width="40" height="40" alt="smart device">
+            <!--  </picture>-->
+            <div class="footer-logo__text">
+              <span class="footer-logo__header">Smart Device</span>
+              <span class="footer-logo__add">умные технологии</span>
+            </div>
+          </a>
+        </div>
+
+        <ul class="footer__social-list social-list">
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--facebook" href="" aria-label="facebook">
+              <!-- svg -->
+            </a>
+          </li>
+          <li class="social-list__item ">
+            <a class="social-list__link social-list__link--ok" href="https://www.facebook.com/htmlacademy" aria-label="facebook">
+              <!-- svg -->
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--vk" href="https://www.instagram.com/htmlacademy" aria-label="youtube">
+              <!-- svg -->
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="about-site">
+        <h2 class="about-site__title">Разделы сайта</h2>
+
+        <ul class="about-site__list">
+          <li class="about-site__item"><a class="about-site__link" href="#">О компании</a></li>
+          <li class="about-site__item"><a class="about-site__link" href="#">Продукты</a></li>
+          <li class="about-site__item"><a class="about-site__link" href="#">Производство печатных плат</a></li>
+          <li class="about-site__item"><a class="about-site__link" href="#">Монтаж печатных плат</a></li>
+          <li class="about-site__item"><a class="about-site__link" href="#">Комплектующие</a></li>
+          <li class="about-site__item"><a class="about-site__link" href="#">Доставка</a></li>
+          <li class="about-site__item"><a class="about-site__link" href="#">Контакты</a></li>
+        </ul>
+      </section>
+
+      <section class="about-office office-info">
+        <h2 class="office-info__title">Наш офис</h2>
+        <ul class="office-info__list">
+          <li class="office-info__item"><a class="office-info__link" href="#">г. Мытищи, Олимпийский проспект, д.10</a></li>
+          <li class="office-info__item"><a class="office-info__link" href="tel:+74955894050">+7 (495) 589-40-50</a></li>
+          <li class="office-info__item"><a class="office-info__link" href="tel:+79250038767">+7 (925) 003-87-67</a></li>
+          <li class="office-info__item"><a class="office-info__link" href="tel:+792692608079">+7 (926) 926-080-79</a></li>
+        </ul>
+      </section>
+    </div>
+
+    <section class="copyrights">
+      <ul class="copyrights__list">
+        <li class="copyrights__item">Все права защищены</li>
+        <li class="copyrights__item">1999-2018 SD Service Devices</li>
+        <li class="copyrights__item"><a class="copyrights__info" href="#">Условия конфиденциальности</a></li>
+        <li class="copyrights__item"><a class="copyrights__info" href="#">Developed by wow studio</a></li>
+      </ul>
+    </section>
+  </footer>
 </body>
 </html>
