--- a/source/index.html
+++ b/source/index.html
@@ -10,8 +10,9 @@
 <body>
   <header class="header">
     <section class="header__wrapper">
-      <div class="header__logo">
-        <a class="header__logo-link logo">
+      <!--logo-->
+      <div class="header__logo logo">
+        <a class="logo__link">
           <img class="logo__icon" src="img/icon-logo.svg" width="40" height="40" alt="smart device">
           <div class="logo__text">
             <span class="logo__header">Smart Device</span>
@@ -21,7 +22,7 @@
       </div>
 
       <!-- navigation -->
-      <nav class="navigation navigation--closed navigation--nojs <!--(navigation--opened)-->">
+      <nav class="header__navigation navigation navigation--closed navigation--nojs <!--(navigation--opened)-->">
         <button class="navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
           <svg width="37" height="13">
@@ -31,7 +32,7 @@
       </nav>
 
       <!-- info -->
-      <ul class="contacts">
+      <ul class="header__contacts contacts">
         <li class="contacts__item contacts__item--mail">
           <a href="mailto:info@sd.ru">
             <svg width="19" height="14">
@@ -54,7 +55,7 @@
       </ul>
     </section>
 
-      <!-- promo -->
+    <!-- promo -->
     <section class="header__promo promo">
       <div class="promo__info">
         <h1 class="promo__title">Печатные платы</h1>
