--- a/source/index.html
+++ b/source/index.html
@@ -70,6 +70,7 @@
         <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
         <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
       </div>
+      <img class="promo__image" src="img/motherboard.png" width="500" height="300" alt="smart device">
     </section>
   </header>
 
