--- a/source/index.html
+++ b/source/index.html
@@ -20,41 +20,41 @@
           </div>
         </a>
       </div>
-
-      <!-- navigation -->
-      <nav class="header__navigation navigation navigation--closed navigation--nojs <!--(navigation--opened)-->">
-        <button class="navigation__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-          <svg width="37" height="13">
-            <use xlink:href="img/sprite.svg#icon-burger"></use>
-          </svg>
-        </button>
-      </nav>
-
-      <!-- info -->
-      <ul class="header__contacts contacts">
-        <li class="contacts__item contacts__item--mail">
-          <a href="mailto:info@sd.ru">
-            <svg width="19" height="14">
-              <use xlink:href="img/sprite.svg#icon-mail"></use>
+      <div class="header__menu">
+        <!-- navigation -->
+        <nav class="header__navigation navigation navigation--closed navigation--nojs <!--(navigation--opened)-->">
+          <button class="navigation__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+            <svg width="37" height="13">
+              <use xlink:href="img/sprite.svg#icon-burger"></use>
             </svg>
-            <span class="contacts__text">info@sd.ru</span>
-          </a>
-        </li>
-        <li class="contacts__item contacts__item--phone">
-          <a href="tel:+74950005252">
-            <svg width="18" height="18">
-              <use xlink:href="img/sprite.svg#icon-phone"></use>
-            </svg>
-            <span class="contacts__text">+7 (495) 000 52 52</span>
-          </a>
-        </li>
-        <li class="contacts__item contacts__item--order-call">
-          <button class="contacts__button" type="button">Заказать звонок</button>
-        </li>
-      </ul>
-    </section>
+          </button>
+        </nav>
 
+        <!-- info -->
+        <ul class="header__contacts contacts">
+          <li class="contacts__item contacts__item--mail">
+            <a href="mailto:info@sd.ru">
+              <svg width="19" height="14">
+                <use xlink:href="img/sprite.svg#icon-mail"></use>
+              </svg>
+              <span class="contacts__text">info@sd.ru</span>
+            </a>
+          </li>
+          <li class="contacts__item contacts__item--phone">
+            <a href="tel:+74950005252">
+              <svg width="18" height="18">
+                <use xlink:href="img/sprite.svg#icon-phone"></use>
+              </svg>
+              <span class="contacts__text">+7 (495) 000 52 52</span>
+            </a>
+          </li>
+          <li class="contacts__item contacts__item--order-call">
+            <button class="contacts__button" type="button">Заказать звонок</button>
+          </li>
+        </ul>
+      </section>
+    </div>
     <!-- promo -->
     <section class="header__promo promo">
       <div class="promo__info">
