--- a/source/index.html
+++ b/source/index.html
@@ -147,7 +147,6 @@
     <section class="stay">
       <div class="stay__container">
         <div class="stay__wrapper">
-          <img class="stay__icon" src="img/paper_airplane.png" width="300" height="100" alt="smart device">
           <div class="stay__forms">
             <h2 class="stay__header">Остались вопросы? Задайте их нам!</h2>
             <p class="stay__text">Мы проконсультируем Вас бесплатно</p>
@@ -159,7 +158,7 @@
                     <input class="form__item-input" type="text" name="user-name" id="name" placeholder="Имя">
                   </li>
                   <li class="form__item form__item--number">
-                    <input class="form__item-input" type="text" name="number" id="number" placeholder="Телефон">
+                    <input class="form__item-input" type="phone" name="number" id="number" placeholder="Телефон">
                   </li>
                   <li class="form__item form__item--question">
                     <textarea class="form__area" name="question" id="question">Ваш вопрос</textarea>
@@ -205,7 +204,7 @@
                 </svg>
                 </a>
               </li>
-              <li class="social-list__item ">
+              <li class="social-list__item">
                 <a class="social-list__link social-list__link--ok" href="https://www.facebook.com/htmlacademy" aria-label="facebook">
                   <svg width="27" height="27">
                     <use xlink:href="img/sprite.svg#icon-ok"></use>
