--- a/source/index.html
+++ b/source/index.html
@@ -266,7 +266,37 @@
       </ul>
     </section>
   </footer>
+  <section class="popup popup--close">
+    <button class="popup__button" type="submit"></button>
+    <div class="popup__wrapper">
+      <h2 class="popup__header">Закажите звонок</h2>
+      <p class="popup__text">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+      <form class="popup__form popup-form" method="post" action="">
+
+        <fieldset class="popup-form__comment-item popup-form__comment-item--name">
+          <ul class="popup-form__list">
+            <li class="popup-form__item popup-form__item--name">
+              <input class="popup-form__item-input" type="text" name="user-name" id="popup-name" placeholder="Имя">
+            </li>
+            <li class="popup-form__item popup-form__item--number">
+              <input class="popup-form__item-input" type="phone" name="number" id="popup-number" placeholder="Телефон">
+            </li>
+            <li class="popup-form__item popup-form__item--question">
+              <textarea class="popup-form__area" name="question" id="popup-question">Ваш вопрос</textarea>
+            </li>
+          </ul>
+        </fieldset>
+        <button class="popup-form__button" type="submit">Задать вопрос</button>
+        <p class="popup-form__label form__label--checkbox">
+          <input class="popup-form__input-checkbox" type="checkbox" name="agree" id="popup-agree" checked>
+          <label class="popup-form__label" for="popup-agree">Я согласен на обработку персональных данных</label>
+        </p>
+        </div>
+      </form>
+    </div>
+  </section>
   <script src="js/about-site-script.js"></script>
   <script src="js/about-office-script.js"></script>
+  <script src="js/modal-script.js"></script>
 </body>
 </html>
