улучшила код, проверила сайт на переполняемость, доделала нижнюю часть футера

--- a/source/index.html
+++ b/source/index.html
@@ -58,19 +58,17 @@
 
     <!-- promo -->
     <section class="header__promo promo">
-      <div class="promo__info">
-        <h1 class="promo__title">Печатные платы</h1>
-        <div class="promo__description">
-          <div class="promo__icon">
-            <svg>
-              <use xlink:href="img/sprite.svg#icon-dash"></use>
-            </svg>
-          </div>
-          <p class="promo__text">Производство и монтаж, поставка комплектующих, блоков и модулей</p>
+      <h1 class="promo__title">Печатные платы</h1>
+      <div class="promo__description">
+        <div class="promo__icon">
+          <svg>
+            <use xlink:href="img/sprite.svg#icon-dash"></use>
+          </svg>
         </div>
-        <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
-        <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
+        <p class="promo__text">Производство и монтаж, поставка комплектующих, блоков и модулей</p>
       </div>
+      <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
+      <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
     </section>
   </header>
 
@@ -221,8 +219,7 @@
         </section>
 
         <div class="footer__about">
-          <div class="footer__about-site">
-            <section class="about-site about-site--closed <!--(about-site--opened)-->">
+            <section class="footer__about-site about-site about-site--closed <!--(about-site--opened)-->">
               <h2 class="about-site__title">Разделы сайта</h2>
               <button class="about-site__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
@@ -238,9 +235,7 @@
                 <li class="about-site__item"><a class="about-site__link" href="#">Контакты</a></li>
               </ul>
             </section>
-          </div>
-          <div class="footer__about-office">
-            <section class="about-office about-office--closed <!--(about-office--opened)-->">
+            <section class="footer__about-office about-office about-office--closed <!--(about-office--opened)-->">
               <h2 class="about-office__title">Наш офис</h2>
               <button class="about-office__toggle" type="button">
                 <span class="visually-hidden">Открыть меню</span>
