Делаю хедер под пиксель пёрфект

--- a/source/index.html
+++ b/source/index.html
@@ -53,8 +53,9 @@
             <button class="contacts__button" type="button">Заказать звонок</button>
           </li>
         </ul>
-      </section>
-    </div>
+      </div>
+    </section>
+    
 
     <!-- promo -->
     <section class="header__promo promo">
@@ -261,7 +262,7 @@
       </ul>
     </section>
   </footer>
-  <section class="popup popup--close">
+  <section class="popup">
     <button class="popup__button" type="submit"></button>
     <div class="popup__wrapper">
       <h2 class="popup__header">Закажите звонок</h2>
