--- a/source/index.html
+++ b/source/index.html
@@ -55,7 +55,6 @@
         </ul>
       </div>
     </section>
-    
 
     <!-- promo -->
     <section class="header__promo promo">
@@ -114,8 +113,7 @@
           <p class="about-company__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
           технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
           <p class="about-company__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
-          REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД),
-          РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.</p>
+          REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог ..</p>
           <button class="about-company__button">Подробнее</button>
         </div>
       </div>
