--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
 <body>
   <header class="header">
     <section class="header__wrapper">
+      <h1 class="visually-hidden">Верхнее меню</h1>
       <!--logo-->
       <div class="header__logo logo">
         <a class="logo__link">
@@ -128,15 +129,15 @@
         <ul class="services__list">
           <li class="services__item services__item--production">
             <p class="services__info">Производство печатных плат</p>
-            <button class="services__button" href="#"></button>
+            <a class="services__button" href="#"></a>
           </li>
           <li class="services__item services__item--mounting">
             <p class="services__info">Монтаж печатных плат</p>
-            <button class="services__button" href="#"></button>
+            <a class="services__button" href="#"></a>
           </li>
           <li class="services__item services__item--parts">
             <p class="services__info">Комплектующие для светотехники</p>
-            <button class="services__button" href="#"></button>
+            <a class="services__button" href="#"></a>
           </li>
         </ul>
       </div>
@@ -147,7 +148,7 @@
           <div class="stay__forms">
             <h2 class="stay__header">Остались вопросы? Задайте их нам!</h2>
             <p class="stay__text">Мы проконсультируем Вас бесплатно</p>
-            <form class="stay__form form" method="post" action="">
+            <form class="stay__form form" method="post" action="#">
 
               <fieldset class="form__comment-item form__comment-item--name">
                 <ul class="form__list">
@@ -155,7 +156,7 @@
                     <input class="form__item-input" type="text" name="user-name" id="name" placeholder="Имя">
                   </li>
                   <li class="form__item form__item--number">
-                    <input class="form__item-input" type="phone" name="number" id="number" placeholder="Телефон">
+                    <input class="form__item-input" type="tel" name="number" id="number" placeholder="Телефон">
                   </li>
                   <li class="form__item form__item--question">
                     <textarea class="form__area" name="question" id="question">Ваш вопрос</textarea>
@@ -178,8 +179,8 @@
   <footer class="footer">
     <div class="footer__up">
       <div class="footer__wrapper">
-
         <section class="footer__left">
+          <h2 class="visually-hidden">Меню футера</h2>
           <div class="footer__left-wrapper">
             <div class="footer__logo">
               <a class="footer__logo-link footer-logo">
@@ -248,10 +249,10 @@
             </section>
           </div>
         </div>
-      </div>
     </div>
 
     <section class="copyrights">
+      <h2 class="visually-hidden">Copyrights</h2>
       <ul class="copyrights__list">
         <li class="copyrights__item copyrights__item--all-rights">Все права защищены</li>
         <li class="copyrights__item copyrights__item--sd">1999-2018 SD Service Devices</li>
@@ -265,7 +266,7 @@
     <div class="popup__wrapper">
       <h2 class="popup__header">Закажите звонок</h2>
       <p class="popup__text">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
-      <form class="popup__form popup-form" method="post" action="">
+      <form class="popup__form popup-form" method="post" action="#">
 
         <fieldset class="popup-form__comment-item popup-form__comment-item--name">
           <ul class="popup-form__list">
@@ -273,7 +274,7 @@
               <input class="popup-form__item-input" type="text" name="user-name" id="popup-name" placeholder="Имя">
             </li>
             <li class="popup-form__item popup-form__item--number">
-              <input class="popup-form__item-input" type="phone" name="number" id="popup-number" placeholder="Телефон">
+              <input class="popup-form__item-input" type="tel" name="number" id="popup-number" placeholder="Телефон">
             </li>
             <li class="popup-form__item popup-form__item--question">
               <textarea class="popup-form__area" name="question" id="popup-question">Ваш вопрос</textarea>
@@ -285,7 +286,6 @@
           <input class="popup-form__input-checkbox" type="checkbox" name="agree" id="popup-agree" checked>
           <label class="popup-form__label" for="popup-agree">Я согласен на обработку персональных данных</label>
         </p>
-        </div>
       </form>
     </div>
   </section>
