Исправляю некоторые замечания наставника

--- a/source/index.html
+++ b/source/index.html
@@ -70,7 +70,9 @@
       </div>
       <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
       <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
+      <button class="promo__button-scroll">Скролл вниз</button>
     </section>
+    
   </header>
 
   <main class="main">
