--- a/source/index.html
+++ b/source/index.html
@@ -36,15 +36,15 @@
         <ul class="header__contacts contacts">
           <li class="contacts__item contacts__item--mail">
             <a href="mailto:info@sd.ru">
-              <svg width="19" height="14">
+              <svg>
                 <use xlink:href="img/sprite.svg#icon-mail"></use>
               </svg>
               <span class="contacts__text">info@sd.ru</span>
             </a>
           </li>
           <li class="contacts__item contacts__item--phone">
-            <a href="tel:+74950005252">
-              <svg width="18" height="18">
+            <a class="contacts__item--phone" href="tel:+74950005252">
+              <svg>
                 <use xlink:href="img/sprite.svg#icon-phone"></use>
               </svg>
               <span class="contacts__text">+7 (495) 000 52 52</span>
