делаю промо сектор

--- a/source/index.html
+++ b/source/index.html
@@ -59,25 +59,27 @@
 
     <!-- promo -->
     <section class="header__promo promo">
-      <h1 class="promo__title">Печатные платы</h1>
-      <div class="promo__description">
-        <div class="promo__icon">
-          <svg>
-            <use xlink:href="img/sprite.svg#icon-dash"></use>
-          </svg>
+      <div class="promo__wrapper">
+        <h1 class="promo__title">Печатные платы</h1>
+        <div class="promo__description">
+          <div class="promo__icon">
+            <svg>
+              <use xlink:href="img/sprite.svg#icon-dash"></use>
+            </svg>
+          </div>
+          <p class="promo__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
         </div>
-        <p class="promo__text">Производство и монтаж, поставка комплектующих, блоков и модулей</p>
+        <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
+        <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
+        <a class="promo__button-scroll" href="#advantages">Скролл вниз</button>
       </div>
-      <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
-      <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
-      <button class="promo__button-scroll">Скролл вниз</button>
     </section>
 
   </header>
 
   <main class="main">
 
-    <section class="advantages">
+    <section class="advantages" id="advantages">
       <h2 class="visually-hidden">Наши преимущества</h2>
 
       <!-- advantages list -->
