Делаю сукцию преимуществ

--- a/source/index.html
+++ b/source/index.html
@@ -84,7 +84,7 @@
 
       <!-- advantages list -->
       <ul class="advantages__list">
-        <li class="advantages__item advantages__item--time advantages__item--active">
+        <li class="advantages__item advantages__item--time">
           <h2 class="advantages__title">Оперативные сроки</h2>
           <p class="advantages__text">Усовершенствованная логистическая система позволяет нам просчитывать стоимость,
           производить и доставлять заказы плат и комплектующих в самые короткие сроки</p>
