--- a/source/index.html
+++ b/source/index.html
@@ -118,7 +118,9 @@
           <p class="about-company__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
           технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
           <p class="about-company__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
-          REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог ..</p>
+            REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД), 
+            РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.
+          </p>
           <button class="about-company__button">Подробнее</button>
         </div>
       </div>
@@ -296,5 +298,6 @@
   <script src="js/about-site-script.js"></script>
   <script src="js/about-office-script.js"></script>
   <script src="js/modal-script.js"></script>
+  <script src="js/about-company-script.js"></script>
 </body>
 </html>
