--- a/source/index.html
+++ b/source/index.html
@@ -118,8 +118,9 @@
           <p class="about-company__text">Мы поставляем электронные комплектующие, производим печатные платы и предоставляем мировые
           технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
           <p class="about-company__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
-            REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог (РЖД), 
-            РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. Среди наших клиентов крупнейшие Производители светотехники России.
+            REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог 
+            <span class="visually-hidden">(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. 
+            Среди наших клиентов крупнейшие Производители светотехники России.</span>
           </p>
           <button class="about-company__button">Подробнее</button>
         </div>
@@ -231,15 +232,19 @@
                 <span class="visually-hidden">Открыть меню</span>
               </button>
 
-              <ul class="about-site__list">
-                <li class="about-site__item"><a class="about-site__link" href="#">О компании</a></li>
-                <li class="about-site__item"><a class="about-site__link" href="#">Продукты</a></li>
-                <li class="about-site__item"><a class="about-site__link" href="#">Производство печатных плат</a></li>
-                <li class="about-site__item"><a class="about-site__link" href="#">Монтаж печатных плат</a></li>
+              <div class="about-site__list">
+                <ul class="about-site__list-left">
+                  <li class="about-site__item"><a class="about-site__link" href="#">О компании</a></li>
+                  <li class="about-site__item"><a class="about-site__link" href="#">Продукты</a></li>
+                  <li class="about-site__item"><a class="about-site__link" href="#">Производство печатных плат</a></li>
+                  <li class="about-site__item"><a class="about-site__link" href="#">Монтаж печатных плат</a></li>
+                </ul>
+                <ul class="about-site__list-right">
                 <li class="about-site__item"><a class="about-site__link" href="#">Комплектующие</a></li>
                 <li class="about-site__item"><a class="about-site__link" href="#">Доставка</a></li>
                 <li class="about-site__item"><a class="about-site__link" href="#">Контакты</a></li>
-              </ul>
+                </ul>
+              </div>
             </section>
             <section class="footer__about-office about-office about-office--closed <!--(about-office--opened)-->">
               <h2 class="about-office__title">Наш офис</h2>
@@ -259,12 +264,14 @@
 
     <section class="copyrights">
       <h2 class="visually-hidden">Copyrights</h2>
-      <ul class="copyrights__list">
-        <li class="copyrights__item copyrights__item--all-rights">Все права защищены</li>
-        <li class="copyrights__item copyrights__item--sd">1999-2018 SD Service Devices</li>
-        <li class="copyrights__item"><a class="copyrights__info" href="#">Условия конфиденциальности</a></li>
-        <li class="copyrights__item"><a class="copyrights__info" href="#">Developed by wow studio</a></li>
-      </ul>
+      <div class="copyrights__list">
+        <ul class="copyrights__left">
+          <li class="copyrights__item copyrights__item--all-rights">Все права защищены</li>
+          <li class="copyrights__item copyrights__item--sd">1999-2018 SD Service Devices</li>
+          <li class="copyrights__item"><a class="copyrights__info" href="#">Условия конфиденциальности</a></li>
+        </ul>
+        <div class="copyrights__item"><a class="copyrights__info" href="#">Developed by wow studio</a></div>
+      </div>
     </section>
   </footer>
   <section class="popup">
