Делаю якорную ссылку получить бесплатную консультацию

--- a/source/index.html
+++ b/source/index.html
@@ -69,8 +69,8 @@
           </div>
           <p class="promo__text">производство и монтаж, поставка комплектующих, блоков и модулей</p>
         </div>
-        <button class="promo__button promo__button--desktop" type="button">Получить бесплатную консультацию</button>
-        <button class="promo__button promo__button--mobile" type="button">Бесплатная консультация</button>
+        <a class="promo__button promo__button--desktop" href="#form">Получить бесплатную консультацию</a>
+        <a class="promo__button promo__button--mobile" href="#form">Бесплатная консультация</a>
         <a class="promo__button-scroll" href="#advantages">Скролл вниз</button>
       </div>
     </section>
@@ -119,10 +119,11 @@
           технологии с 1997 года. Выполняем срочные заказы и пилотные образцы до 10 дней.</p>
           <p class="about-company__text">Наши поставщики - мировые производители электронных компонентов: OSRAM, CREE, HOLGLITRONIC,
             REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог 
-            <span class="visually-hidden">(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. 
+            <span class="about-company__hidden-text visually-hidden">(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. 
             Среди наших клиентов крупнейшие Производители светотехники России.</span>
+            <button class="about-company__button">Подробнее</button>
           </p>
-          <button class="about-company__button">Подробнее</button>
+          
         </div>
       </div>
     </section>
@@ -149,7 +150,7 @@
         </ul>
       </div>
     </section>
-    <section class="stay">
+    <section class="stay" id="form">
       <div class="stay__container">
         <div class="stay__wrapper">
           <div class="stay__forms">
