делаю чтобы убирался плейсхолдер в textarea при вводе

--- a/source/index.html
+++ b/source/index.html
@@ -167,7 +167,7 @@
                     <input class="form__item-input" type="tel" name="number" id="number" placeholder="Телефон">
                   </li>
                   <li class="form__item form__item--question">
-                    <textarea class="form__area" name="question" id="question">Ваш вопрос</textarea>
+                    <textarea class="form__area" name="question" id="question" placeholder="Ваш вопрос"></textarea>
                   </li>
                 </ul>
               </fieldset>
@@ -291,7 +291,7 @@
               <input class="popup-form__item-input" type="tel" name="number" id="popup-number" placeholder="Телефон">
             </li>
             <li class="popup-form__item popup-form__item--question">
-              <textarea class="popup-form__area" name="question" id="popup-question">Ваш вопрос</textarea>
+              <textarea class="popup-form__area" name="question" id="popup-question" placeholder="Ваш вопрос"></textarea>
             </li>
           </ul>
         </fieldset>
