делаю скрипт для отправки формы

--- a/source/index.html
+++ b/source/index.html
@@ -121,9 +121,8 @@
             REFOND. Печатные платы и комплектующие Service Devices применяются на предприятиях Российских Железных Дорог 
             <span class="about-company__hidden-text visually-hidden">(РЖД), РоссАвтоПрома (ВАЗ, АвтоГАЗ), МинАтома, СпецМедТехники. 
             Среди наших клиентов крупнейшие Производители светотехники России.</span>
-            <button class="about-company__button">Подробнее</button>
           </p>
-          
+          <button class="about-company__button">Подробнее</button>
         </div>
       </div>
     </section>
@@ -241,9 +240,9 @@
                   <li class="about-site__item"><a class="about-site__link" href="#">Монтаж печатных плат</a></li>
                 </ul>
                 <ul class="about-site__list-right">
-                <li class="about-site__item"><a class="about-site__link" href="#">Комплектующие</a></li>
-                <li class="about-site__item"><a class="about-site__link" href="#">Доставка</a></li>
-                <li class="about-site__item"><a class="about-site__link" href="#">Контакты</a></li>
+                  <li class="about-site__item"><a class="about-site__link" href="#">Комплектующие</a></li>
+                  <li class="about-site__item"><a class="about-site__link" href="#">Доставка</a></li>
+                  <li class="about-site__item"><a class="about-site__link" href="#">Контакты</a></li>
                 </ul>
               </div>
             </section>
@@ -276,7 +275,7 @@
     </section>
   </footer>
   <section class="popup">
-    <button class="popup__button" type="submit"></button>
+    <button class="popup__button"></button>
     <div class="popup__wrapper">
       <h2 class="popup__header">Закажите звонок</h2>
       <p class="popup__text">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
@@ -302,6 +301,16 @@
         </p>
       </form>
     </div>
+  </section>
+  <section class="popup-mistake">
+    <button class="popup-mistake__close-button"></button>
+    <h2 class="popup-mistake__header">Проверьте ошибки в форме</h2>
+    <button class="popup-mistake__button">Вернуться к форме</button>
+  </section>
+  <section class="popup-success">
+    <button class="popup-success__close-button"></button>
+    <h2 class="popup-success__header">Форма успешно отправлена</h2>
+    <button class="popup-success__button">Вернуться к форме</button>
   </section>
   <script src="js/about-site-script.js"></script>
   <script src="js/about-office-script.js"></script>
