--- a/source/index.html
+++ b/source/index.html
@@ -166,7 +166,7 @@
                     <input class="form__item-input" type="text" name="user-name" id="name" placeholder="Имя">
                   </li>
                   <li class="form__item form__item--number">
-                    <input class="form__item-input" type="tel" name="number" id="number" placeholder="Телефон">
+                    <input class="form__item-input" type="tel" name="phone" id="phone" placeholder="Телефон">
                   </li>
                   <li class="form__item form__item--question">
                     <textarea class="form__area" name="question" id="question" placeholder="Ваш вопрос"></textarea>
@@ -290,7 +290,7 @@
               <input class="popup-form__item-input" type="text" name="user-name" id="popup-name" placeholder="Имя">
             </li>
             <li class="popup-form__item popup-form__item--number">
-              <input class="popup-form__item-input" type="tel" name="number" id="popup-number" placeholder="Телефон">
+              <input class="popup-form__item-input" type="tel" name="phone" id="popup-number" placeholder="Телефон">
             </li>
             <li class="popup-form__item popup-form__item--question">
               <textarea class="popup-form__area" name="question" id="popup-question" placeholder="Ваш вопрос"></textarea>
@@ -298,7 +298,7 @@
           </ul>
         </fieldset>
         <button class="popup-form__button" type="submit">Задать вопрос</button>
-        <p class="popup-form__label form__label--checkbox">
+        <p class="popup-form__label popup-form__label--checkbox">
           <input class="popup-form__input-checkbox visually-hidden" type="checkbox" name="agree" id="popup-agree" checked>
           <label class="popup-form__label-agree" for="popup-agree">Я согласен на обработку персональных данных</label>
         </p>
@@ -309,5 +309,6 @@
   <script src="js/about-office-script.js"></script>
   <script src="js/modal-script.js"></script>
   <script src="js/about-company-script.js"></script>
+  <script src="js/form.js"></script>
 </body>
 </html>
