--- a/source/index.html
+++ b/source/index.html
@@ -307,6 +307,6 @@
   </section>
   <script src="js/about-script.js"></script>
   <script src="js/modal-script.js"></script>
-  <!--<script src="js/form.js"></script>
+ <!-- <script src="js/form.js"></script>-->
 </body>
 </html>
