возвращаю кнопку скролл вниз

--- a/source/index.html
+++ b/source/index.html
@@ -71,7 +71,7 @@
         </div>
         <a class="promo__button promo__button--desktop" href="#form">Получить бесплатную консультацию</a>
         <a class="promo__button promo__button--mobile" href="#form">Бесплатная консультация</a>
-        <a class="promo__button-scroll" href="#advantages">Скролл вниз</button>
+        <a class="promo__button-scroll" href="#advantages">Скролл вниз</a>
       </div>
     </section>
 
