--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Стартовый шаблон</title>
   <link rel="stylesheet" href="css/style.min.css">
-  <!--<style>
+ <!-- <style>
     HTML {
     opacity: 0.5;
       background-repeat: no-repeat;
@@ -104,7 +104,7 @@
 
           <li class="advantages__item advantages__item--contractor">
             <h2 class="advantages__title">Крупные поставщики</h2>
-            <p class="advantages__text">Нашими поставщиками являются такие крупные мировые компании как: OSRAM, &nbsp;CREE, HOLGLITRONIC,
+            <p class="advantages__text">Нашими поставщиками являются такие крупные мировые компании как:&nbsp; OSRAM, CREE, HOLGLITRONIC,
             REFOND. Сотрудничество с такими компаниями обеспичивает хорошее качество нашей продукции.</p>
           </li>
 
