--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Стартовый шаблон</title>
   <link rel="stylesheet" href="css/style.min.css">
- <!-- <style>
+  <style>
     HTML {
     opacity: 0.5;
       background-repeat: no-repeat;
@@ -28,7 +28,7 @@
         background-image: url( "img/Smart Device 320.jpg" );
       }
     }
-  </style>-->
+  </style>
 </head>
 <body>
   <header class="header">
